<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:icon="@mipmap/nav_call"
        android:id="@+id/nav_call"
        android:title="@string/call"/>
    <item
        android:id="@+id/nav_friends"
        android:icon="@mipmap/nav_friends"
        android:title="@string/freinds"/>
    <item
        android:id="@+id/nav_Location"
        android:icon="@mipmap/nav_locations"
        android:title="@string/locations"/>
    <item
        android:id="@+id/nav_mail"
        android:icon="@mipmap/nav_events"
        android:title="@string/mail"/>
    <item
        android:id="@+id/nav_task"
        android:icon="@mipmap/nav_settings"
        android:title="@string/task"/>
</group>
</menu>